tests/type/errors/bad-multiple-return.typedsol
6:5 error: Mismatched return type for function